--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>SGI Asylum</title>
+  <title>aslume fps (im bad at this)</title>
 
   <link rel="shortcut icon" href="favicon.ico" />
   <link rel="stylesheet" href="styles.css">
